# test_pycharm_47555

./: pyproject.toml
src/foo/: __init__.py  interface.py  manager.py
tests/: test_interface.py
