[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Geoffrey Lentner <glentner@purdue.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", ]
markers = [
    "unit: Unit tests are short, interface driven tests on discrete components.",
]
